# corereveal

./: .dockerignore  .gitignore  Dockerfile  README.md  build_and_run.sh  pyproject.toml
CoreReveal/: CoreReveal.py  corereveal.py
docker/: Dockerfile
docker/downloads/: .gitignore
docs/uml/: sequence.uml
ghidra-project/: .gitignore
scripts/: CoreReveal.py
src/corereveal/: cli.py  corereveal_types.py  mock_qiling_interface.py  qiling_interface.py  types.py
test/: README.md  conftest.py  test_bb_path.py  test_bss.py  test_execution.py  test_posix.py
test/src/: Makefile  ini_reader.c  rng_guesser.c  sus.c  test_config.ini
